# data360-autodoc

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO_DRIFT.md  models.py  pyproject.toml
agent_docs/: api_reference.md
cli/: main.py
data360_autodoc/: __init__.py
data360_autodoc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data360_autodoc/cli/: __init__.py  main.py
data360_autodoc/fetcher/: metadata.py  streams.py
data360_autodoc/generator/: markdown.py  mermaid.py  snapshot.py
fetcher/: __init__.py  _http.py  auth.py  metadata.py  streams.py
generator/: __init__.py  markdown.py  mermaid.py  snapshot.py
marketing/: demo-gif-script.md  landing-blurb.md  launch-posts.md
tests/: conftest.py  test_api_version.py  test_auth.py  test_cli.py  test_dmo_enrichment.py  test_dmo_resilience.py  test_http.py  test_markdown.py  test_mermaid.py  test_metadata.py  test_metadata_errors.py  test_snapshot.py  test_streams.py
