[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data360-autodoc"
version = "0.2.0"
description = "Auto-generate human-readable documentation for Salesforce Data 360 orgs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "data360-autodoc contributors" }]
keywords = ["salesforce", "data-cloud", "data-360", "documentation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.1",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/valentinatihova/data360-autodoc"
Repository = "https://github.com/valentinatihova/data360-autodoc"
Issues = "https://github.com/valentinatihova/data360-autodoc/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "black>=24.0",
]

[project.scripts]
data360-autodoc = "data360_autodoc.cli.main:cli"

[tool.setuptools.packages.find]
include = ["data360_autodoc*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
